further project structuring

--- a/src/Localizer/Localizer.csproj
+++ b/src/Localizer/Localizer.csproj
@@ -2,13 +2,11 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
     </PropertyGroup>
-    
+
     <ItemGroup>
-        <InternalsVisibleTo Include="Localizer.Tests" />
+      <ProjectReference Include="..\Localizer.Core\Localizer.Core.csproj" />
+      <ProjectReference Include="..\Localizer.Infrastructure\Localizer.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
