--- a/src/Localizer.Infrastructure/Localizer.Infrastructure.csproj
+++ b/src/Localizer.Infrastructure/Localizer.Infrastructure.csproj
@@ -1,6 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+        <PackageReference Include="Spectre.Console.Cli" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    </ItemGroup>
+    
+    <ItemGroup>
       <ProjectReference Include="..\Localizer.Core\Localizer.Core.csproj" />
     </ItemGroup>
 
