add options and deepl provider

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,9 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Localizer</RootNamespace>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <AnalysisMode>All</AnalysisMode>
+        <NoWarn>CA2007</NoWarn>
     </PropertyGroup>
     
     <ItemGroup>
