--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,14 +3,17 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
     
-  <ItemGroup>
+    
+  <ItemGroup Label="External">
       <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
       <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
       <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
-  </ItemGroup>
-    
-  <ItemGroup Label="External">
+      <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+      <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+      <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.4" />
+      <PackageVersion Include="Nerdbank.GitVersioning" Version="3.7.115" />    
       <PackageVersion Include="Spectre.Console.Cli" Version="0.50.1-preview.0.5" />
+      <PackageVersion Include="DeepL.net" Version="1.14.0" />
   </ItemGroup>
     
   <ItemGroup Label="Tests">
