--- a/src/Localizer.Infrastructure/Localizer.Infrastructure.csproj
+++ b/src/Localizer.Infrastructure/Localizer.Infrastructure.csproj
@@ -4,6 +4,10 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Spectre.Console.Cli" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
+        <PackageReference Include="DeepL.net" />
     </ItemGroup>
     
     <ItemGroup>
