--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,13 @@
         <AnalysisMode>All</AnalysisMode>
         <NoWarn>CA2007</NoWarn>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Nerdbank.GitVersioning">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
     
     <ItemGroup>
         <InternalsVisibleTo Include="Localizer.Tests" />
