--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,5 +22,6 @@
       <PackageVersion Include="Verify.XunitV3" Version="29.2.0" />
       <PackageVersion Include="xunit.v3" Version="2.0.1" />
       <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
+      <PackageVersion Include="NetArchTest.eNhancedEdition" Version="1.4.4" />
   </ItemGroup>
 </Project>
