--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,26 +2,26 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
-    
-    
   <ItemGroup Label="External">
-      <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
-      <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-      <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
-      <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
-      <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
-      <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.4" />
-      <PackageVersion Include="Nerdbank.GitVersioning" Version="3.7.115" />    
-      <PackageVersion Include="Spectre.Console.Cli" Version="0.50.1-preview.0.5" />
-      <PackageVersion Include="DeepL.net" Version="1.14.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.4" />
+    <PackageVersion Include="Nerdbank.GitVersioning" Version="3.7.115" />
+    <PackageVersion Include="Spectre.Console.Cli" Version="0.50.1-preview.0.5" />
+    <PackageVersion Include="DeepL.net" Version="1.14.0" />
   </ItemGroup>
-    
   <ItemGroup Label="Tests">
-      <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-      <PackageVersion Include="Shouldly" Version="4.3.0" />
-      <PackageVersion Include="Verify.XunitV3" Version="29.2.0" />
-      <PackageVersion Include="xunit.v3" Version="2.0.1" />
-      <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
-      <PackageVersion Include="NetArchTest.eNhancedEdition" Version="1.4.4" />
+    <PackageVersion Include="Spectre.Console.Testing" Version="0.50.0" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
+    <PackageVersion Include="Verify.XunitV3" Version="29.3.0" />
+    <PackageVersion Include="xunit.v3" Version="2.0.1" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
+    <PackageVersion Include="NetArchTest.eNhancedEdition" Version="1.4.4" />
+    <PackageVersion Include="NSubstitute" Version="5.3.0" />
   </ItemGroup>
 </Project>
