--- a/src/Localizer/appsettings.json
+++ b/src/Localizer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "TranslationTextProviderType": "ReplaceMe",
+  "TranslationProvider": "ReplaceMe",
   "DeepL": {
     "AuthKey": "",
     "Context": "",
