--- a/tests/Localizer.Tests/Localizer.Tests.csproj
+++ b/tests/Localizer.Tests/Localizer.Tests.csproj
@@ -6,6 +6,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+    <NoWarn>CA1515</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -36,6 +37,10 @@
     <ProjectReference Include="..\..\src\Localizer.Infrastructure\Localizer.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\Localizer.Application\Localizer.Application.csproj" />
     <ProjectReference Include="..\..\src\Localizer\Localizer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="TestResults\**" />
   </ItemGroup>
     
 </Project>
