--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,8 +15,8 @@
   </ItemGroup>
   <ItemGroup Label="Tests">
     <PackageVersion Include="Spectre.Console.Testing" Version="0.50.0" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageVersion Include="Microsoft.CodeCoverage" Version="17.13.0" />
     <PackageVersion Include="Shouldly" Version="4.3.0" />
     <PackageVersion Include="Verify.XunitV3" Version="29.3.0" />
     <PackageVersion Include="xunit.v3" Version="2.0.1" />
