--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,10 +5,17 @@
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <AnalysisMode>All</AnalysisMode>
+        <DebugType>embedded</DebugType>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <ContinuousIntegrationBuild Condition="'$(Configuration)'=='Release'">true</ContinuousIntegrationBuild>
         <NoWarn>CA2007</NoWarn>
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
         <InternalsVisibleTo Include="Localizer.Tests;DynamicProxyGenAssembly2" />
     </ItemGroup>
 </Project>
