--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,6 +10,7 @@
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.7.115" />
     <PackageVersion Include="Spectre.Console.Cli" Version="0.50.1-preview.0.5" />
     <PackageVersion Include="DeepL.net" Version="1.14.0" />
+    <PackageVersion Include="Microsoft.Sbom.Targets" Version="3.0.0" />
   </ItemGroup>
   <ItemGroup Label="Analyzers">
     <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.13.61" />
@@ -24,5 +25,8 @@
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
     <PackageVersion Include="NetArchTest.eNhancedEdition" Version="1.4.4" />
     <PackageVersion Include="NSubstitute" Version="5.3.0" />
+  </ItemGroup>
+  <ItemGroup Label="Cake">
+    <PackageVersion Include="Cake.Frosting" Version="5.0.0" />
   </ItemGroup>
 </Project>
