--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.setTag.outputs.tag }}
+      
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
@@ -32,7 +35,7 @@ jobs:
           name: jdrst.Localizer.v${{ env.GitBuildVersionSimple }}.nupkg
           path: src/Localizer/bin/Release/*.nupkg
       - name: Set job outputs
-        id: setOutputs
+        id: setTag
         run: echo "tag=v${{ env.GitBuildVersionSimple }}" >> $GITHUB_OUTPUT
   
   deploy:
