--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     if: ${{ github.ref == 'refs/heads/main' }}
+    permissions:
+      contents: write
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v4.3.0
@@ -50,7 +52,7 @@ jobs:
         path: artifacts
 
     - name: Create release
-      uses: ncipollo/release-action@2c591bcc8ecdcd2db72b97d6147f871fcd833ba5
+      uses: ncipollo/release-action@2c591bcc8ecdcd2db72b97d6147f871fcd833ba5 
       with:
        artifacts: "artifacts/*.nupkg"
        token: ${{ secrets.GITHUB_TOKEN }}        
@@ -58,8 +60,8 @@ jobs:
           
     - name: Publish the package to nuget.org
       run: dotnet nuget push artifacts/*.nupkg -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
-    env:
-      NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
 
 
           
